fix(ui): use append-selector to avoid squashing
top level selectors

Closes #1737

--- a/src/content/styles/common/_all.scss
+++ b/src/content/styles/common/_all.scss
@@ -47,26 +47,28 @@ $keyboard-only: '.rv-keyboard-only';
 @mixin include-size($name) {
     @if $name == rv-gt-sm {
         @at-root {
-            .rv-medium#{&}, .rv-large#{&} {
+            #{selector-append(".rv-medium", &)},
+            #{selector-append(".rv-large", &)} {
                 @content;
             }
         }
     } @else if $name == rv-sm {
-        @at-root.rv-small#{&} {
+        @at-root #{selector-append(".rv-small", &)} {
             @content;
         }
     } @else if $name == rv-lt-lg {
         @at-root {
-            .rv-small#{&}, .rv-medium#{&} {
+            #{selector-append(".rv-small", &)},
+            #{selector-append(".rv-medium", &)} {
                 @content;
             }
         }
     } @else if $name == rv-md {
-        @at-root.rv-medium#{&} {
+        @at-root #{selector-append(".rv-medium", &)} {
             @content;
         }
     } @else if $name == rv-lg {
-        @at-root.rv-large#{&} {
+        @at-root #{selector-append(".rv-large", &)} {
             @content;
         }
     }
